# CSV-JSON-Convertor

./: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake
Data-files/: Data.csv  Data.json
Header-Files/: CSV_JSON.h  Err_Codes.h  Header.h
Source-Files/: CSV_JSON.cpp  main.cpp
